# rust-graphql-playground

./: Cargo.toml  flake.nix
entity/: Cargo.toml
entity/src/: lib.rs  organization.rs  organization_id.rs
logging/: Cargo.toml
logging/src/: lib.rs
migrations/: 20241126061604_new.up.sql
persistence/: Cargo.toml
persistence/src/: lib.rs
repository/: Cargo.toml
repository/fixtures/: query_organizations_by_ids.sql
repository/queries/: query_organizations_by_ids.sql
repository/src/: lib.rs  query_organization_by_id.rs
resolver/: Cargo.toml
resolver/src/: lib.rs  query.rs
src/: main.rs
