[package]
edition.workspace = true
name = "rust-graphql-playground"
version.workspace = true

[dependencies]

[workspace]
members = ["logging", "persistence"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.93"
logging.path = "logging"
persistence.path = "persistence"
sqlx = "0.8.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[workspace.package]
authors = ["pranc1ngpegasus"]
edition = "2021"
version = "0.1.0"

[workspace.metadata.lints.clippy]
all = "warn"
