[package]
edition.workspace = true
name = "rust-graphql-playground"
version.workspace = true

[dependencies]
anyhow.workspace = true
envy.workspace = true
axum.workspace = true
tokio.features = ["macros", "net", "rt-multi-thread"]
tokio.workspace = true
serde.features = ["derive"]
serde.workspace = true

[workspace]
members = ["entity", "logging", "persistence", "resolver"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.93"
async-graphql = "7.0.11"
axum = "0.7.9"
chrono = "0.4.38"
derive-getters = "0.5.0"
derive-new = "0.7.0"
entity.path = "entity"
envy = "0.4.2"
logging.path = "logging"
persistence.path = "persistence"
resolver.path = "resolver"
serde = "1.0.215"
sqlx = "0.8.2"
tokio = "1.41.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.11.0"

[workspace.package]
authors = ["pranc1ngpegasus"]
edition = "2021"
version = "0.1.0"

[workspace.metadata.lints.clippy]
all = "warn"
